# traffic-light-detection

./: README.md
cnn_lights_recognize/: 1.txt  2.txt  3.txt  4.txt  CMakeLists.txt  hyp.json  main.cpp  traffic_lights_classifier.cpp  traffic_lights_classifier.h
cnn_lights_recognize/common/: data_struct.h
cnn_lights_recognize/onnx/: onnx_inference.cpp  onnx_inference.h
cnn_lights_recognize/others/traffic_light_detection/: TLState.py  detectColor.py
